# credit_engine

./: .coveragerc  .flake8  .gitignore  404.html  CHANGELOG.md  LICENSE  Makefile  README  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: codecov.yaml  codeql.yaml  dependabot.yaml
.github/workflows/: black.yaml  codacy.yaml  codeql.yaml  deploy-docs.yaml  on_branch_merge.yaml  on_pr.yaml  run_tests.yaml  trivy.yaml
Boolean/: index.html
Contributor/: index.html
ContributorRole/: index.html
ContributorType/: index.html
CreditMetadata/: index.html
CreditMetadataEntry/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Description/: index.html
DescriptionType/: index.html
Double/: index.html
EventDate/: index.html
EventType/: index.html
Float/: index.html
FormattedText/: index.html
FundingReference/: index.html
Integer/: index.html
License/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Organization/: index.html
PermanentID/: index.html
ProviderType/: index.html
RelationshipType/: index.html
ResourceType/: index.html
String/: index.html
TextFormat/: index.html
Time/: index.html
Title/: index.html
TitleType/: index.html
Uri/: index.html
Uriorcurie/: index.html
affiliations/: index.html
award_id/: index.html
award_title/: index.html
award_url/: index.html
comment/: index.html
content/: index.html
content_url/: index.html
contributor_id/: index.html
contributor_roles/: index.html
contributor_type/: index.html
contributors/: index.html
credit_engine/: constants.py  errors.py  util.py
credit_engine/clients/: args.py  base.py  crossref.py  datacite.py  osti.py  osti_elink.py
credit_engine/parsers/: base.py  crossref.py  datacite.py  doi.py  osti.py
credit_metadata/: index.html
credit_metadata_schema_version/: index.html
credit_name/: index.html
date/: index.html
dates/: index.html
description/: index.html
description_text/: index.html
description_type/: index.html
descriptions/: index.html
docs/: kbase_dois.md
event/: index.html
family_name/: index.html
format/: index.html
funder/: index.html
funding/: index.html
given_name/: index.html
grant_id/: index.html
grant_title/: index.html
grant_url/: index.html
id/: index.html
identifier/: index.html
kbase_dois/: index.html
language/: index.html
license/: index.html
name/: index.html
organization_id/: index.html
organization_name/: index.html
osti_scripts/: retrieve_records.py  submit_doi.py
provider/: index.html
publisher/: index.html
related_identifiers/: index.html
relationship_type/: index.html
repository/: index.html
resource_type/: index.html
sample_data/crossref/: 10.46936_10.25585_60000513.json  10.46936_10.25585_60000513.unixref.xml  10.46936_10.25585_60000513.unixsd.xml  10.46936_10.25585_60000611.json  10.46936_10.25585_60000611.unixref.xml  10.46936_10.25585_60000611.unixsd.xml  10.46936_10.25585_60000745.json  10.46936_10.25585_60000745.unixref.xml  10.46936_10.25585_60000745.unixsd.xml  10.46936_10.25585_60000983.json  10.46936_10.25585_60000983.unixref.xml  10.46936_10.25585_60000983.unixsd.xml  10.46936_10.25585_60000990.json  10.46936_10.25585_60000990.unixref.xml  10.46936_10.25585_60000990.unixsd.xml  10.46936_10.25585_60001022.json  10.46936_10.25585_60001022.unixref.xml  10.46936_10.25585_60001022.unixsd.xml  10.46936_10.25585_60001098.json  10.46936_10.25585_60001098.unixref.xml  10.46936_10.25585_60001098.unixsd.xml  10.46936_10.25585_60001190.json  10.46936_10.25585_60001190.unixref.xml  10.46936_10.25585_60001190.unixsd.xml  10.46936_10.25585_60001289.xml  10.46936_10.25585_60007526.json  10.46936_10.25585_60007526.unixref.xml  10.46936_10.25585_60007526.unixsd.xml  10.46936_10.25585_60007530.json  10.46936_10.25585_60007530.unixref.xml  10.46936_10.25585_60007530.unixsd.xml  10.46936_jejc.proj.2013.48086_60005298.json  10.46936_jejc.proj.2013.48086_60005298.preparsed.json  10.46936_jejc.proj.2013.48086_60005298.unixref.xml  10.46936_jejc.proj.2013.48086_60005298.unixsd.xml  10.46936_jejc.proj.2013.48086_60005298.yaml  osti_pubs.json  works_by_funder.json  works_with_orcid.json
sample_data/datacite/: 10.25585_1487552.json  10.25585_1487552.xml  10.25585_1487554.json  10.25585_1487554.xml  10.25585_1487730.json  10.25585_1487730.xml  10.25585_1487760.json  10.25585_1487760.xml  10.25585_1488071.json  10.25585_1488071.xml  10.25982_101788.79_1828290.json  10.25982_101788.79_1828290.xml  10.25982_103341.23_1893106.json  10.25982_105874.55_1844990.json  10.25982_105874.55_1844990.xml  10.25982_106247.14_1924621.json  10.25982_109073.30_1895615.json  10.25982_112150.61_1863566.json  10.25982_112150.61_1863566.xml  10.25982_113717.182_1864845.json  10.25982_113717.182_1864845.xml  10.25982_116829.47_1887425.json  (+82 more)
saved_by/: index.html
schema/: metadata.py  metadata.yaml
search/: search_index.json
src/: util.py
tests/: common.py  conftest.py  test_base.py  test_crossref.py  test_datacite.py  test_doi.py  test_errors.py  test_osti.py  test_util.py
timestamp/: index.html
title/: index.html
title_language/: index.html
title_type/: index.html
titles/: index.html
url/: index.html
version/: index.html
(+297 files in other folders)
