[tool.poetry]
name = "credit_engine"
version = "0.1.0"
description = "Credit Metadata for Data Citation"
authors = ["ialarmedalien <ialarmedalien@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "schema/kbase"]

packages = [
    { include = 'credit_engine' }
]

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
json2python-models = "^0.3.0"
linkml = "1.5.1"
linkml-runtime = "1.5.1"
pydantic = "^1.10.7"
pytest = "7.3.1"
pytest-cases = "^3.6.14"
python = "^3.9"
requests = "2.29.0"
xmlschema = "2.2.3"
xsdata = {extras = ["cli", "lxml", "soap"], version = "^22.12"}

[tool.poetry.dev-dependencies]
black = "^23.3.0"
darglint = "^1.8.1"
dlint = "^0.14.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-comprehensions = "^3.12.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.4.0"
flake8-pie = "^0.16.0"
flake8-return = "^1.2.0"
flake8-simplify = "^0.20.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
mkdocs-material = "^9.1.15"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.isort]
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
