[tool.poetry]
name = "credit_engine"
version = "0.1.0"
description = "Credit Metadata for Data Citation"
authors = ["ialarmedalien <ialarmedalien@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "schema/kbase"]

packages = [
    { include = 'credit_engine' }
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.15"
mkdocs-mermaid2-plugin = "^0.6.0"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
json2python-models = { version = "^0.3.0", optional = true }
linkml = { version = "^1.5.6", optional = true }
pydantic = { extras = ["email"], version = "^1.10.12" }
pytest = "7.4.0"
pytest-cases = "^3.6.14"
python = "^3.10"
requests = "2.31.0"
xmlschema = { version = "2.3.1", optional = true }
xsdata = { extras = ["cli", "lxml", "soap"], version = "^23.6", optional = true }

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material", "mkdocs-mermaid2-plugin"]

[tool.ruff]

# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "B904",
    "C4",
    "D",
    "E",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "I",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "Q",
    "RSE",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TID",
    "UP",
    "W",
    "FIX", "TD"
]
# E203: whitespace before ‘,’, ‘;’, or ‘:’
# E501: line length
# W503: line break after binary operator
ignore = [
    "E203",
    "E501",
    "S101",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    "__pypackages__",
    "_build",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git-rewrite",
    ".git",
    ".github",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "*.pyc",
    "buck-out",
    "build",
    "deps",
    "dist",
    "node_modules",
    "other_schema",
    "python-coverage",
    "sample_data",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 100

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"
